--- a/templates/personal_page.html
+++ b/templates/personal_page.html
@@ -14,7 +14,7 @@
             <h1>{{ current_user.username }}'s Personal Page</h1>
         </div>
         <div class="container">
-            <h3>Recycling Chart</h3>
+            <h3>Recycling Heatmap</h3>
             <div class="plot-container">
                 {{ plot|safe }}
             </div>
